Bug 97411 - Crash when inserting formula in Calc
Summary: Crash when inserting formula in Calc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All Linux (All)
: highest critical
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-28 12:27 UTC by Maxim Monastirsky
Modified: 2016-10-25 19:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2016-01-28 12:27:05 UTC
Open Calc. Insert->Object->Formula... Crash.

Looks like a regression of:

commit 0e7cd653ea90da388820220bf6a3eb140b57bbd6
Author: Maxim Monastirsky <momonasmon@gmail.com>
Date:   Mon Jan 25 01:09:03 2016 +0200

    tdf#86567 Dropdown for conditional formatting
    
    Change-Id: I1ba12a8b7501065e3cd52e17b7c0c83a0f58f9cf

Happens only with gtk2 vclplug. Most likely Unity global menu code related (lp#1296715). (Why do we run this code unconditionally on other DEs?)
Comment 1 Commit Notification 2016-01-28 23:17:05 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6402164182865d7644d2e93158a23e12a6da3926

tdf#97411 ResourceMenuController: Don't forget to dispose MenuBarManager

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.