tdf#97411 ResourceMenuController: Don't forget to dispose MenuBarManager

Change-Id: Ib41952dae6bcca80436355fa5a0707e671fd3698